--- a/src/App.css
+++ b/src/App.css
@@ -8,20 +8,26 @@
   display: table-cell;
   padding: 0.5em;
   border-radius: 0%;
+  font-weight: 600;
   vertical-align: middle;
   text-align: center;
   cursor: pointer;
 }
 
 .DayPicker-Day--today {
-  color: #a3d002;
-  font-weight: 700;
+  color: #bb5160;
+  font-weight: 500;
 }
 
-.Range
-  .DayPicker-Day--selected:not(.DayPicker-Day--start):not(.DayPicker-Day--end):not(.DayPicker-Day--outside) {
-  background-color: #f0f8ff !important;
-  color: #4a90e2;
+.DayPicker-Day--disabled {
+  cursor: not-allowed;
+  color: #797979;
+  font-weight: 500;
+  text-decoration: line-through;
+}
+
+.DayPicker-Day--selected:not(.DayPicker-Day--start):not(.DayPicker-Day--end):not(.DayPicker-Day--outside) {
+  background-color: #13334d !important;
 }
 .Range .DayPicker-Day {
   border-radius: 0 !important;
@@ -29,5 +35,5 @@
 
 .DayPicker:not(.DayPicker--interactionDisabled)
   .DayPicker-Day:not(.DayPicker-Day--disabled):not(.DayPicker-Day--selected):not(.DayPicker-Day--outside):hover {
-  background-color: #2592f1;
+  background-color: #328edf;
 }
